Fix spacing on toy details view

--- a/src/pages/Toys.css
+++ b/src/pages/Toys.css
@@ -201,12 +201,20 @@
     width: 100%;
   }
 
+  .toy-title {
+    font-size: calc(1rem + 1vw)
+  }
+
+  .toy-description {
+    font-size: .95rem
+  }
+
   .toy-container {
     padding: 1rem;
   }
 
   .main-picture {
-    width: 35dvh;
+    width: 35vh;
     aspect-ratio: 1;
     object-fit: cover;
   }
